--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: install depencies
+        run: yarn
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: yarn run export
       - name: Zip artifacts
