--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
             out
       - name: Zip artifacts
         run: |
-          zip my-artifact ./out
+          zip -r my-artifact ./out
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
