--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   "dependencies": {
     "@moxy/next-layout": "^2.2.2",
     "@reduxjs/toolkit": "^1.5.0",
+    "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "next": "10.0.3",
     "next-images": "^1.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "sass": "^1.30.0"
   },
