--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@reduxjs/toolkit": "^1.5.0",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "infinite-react-carousel": "^1.2.11",
+    "lodash": "^4.17.20",
     "next": "10.0.3",
     "next-images": "^1.6.2",
     "react": "17.0.1",
@@ -33,6 +35,7 @@
     "react-redux": "^7.2.2",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.30.0"
   },
   "devDependencies": {
@@ -51,6 +54,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
+    "prop-types": "^15.7.2",
     "typescript": "^4.1.2"
   }
 }
