--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "imask": "^6.0.5",
     "infinite-react-carousel": "^1.2.11",
     "lodash": "^4.17.20",
     "next": "10.0.3",
