--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,3 +10,8 @@ RewriteRule ^(.*)$ https://%1/$1 [L,R=301]
 RewriteCond %{REQUEST_URI} /index.html
 RewriteCond %{QUERY_STRING} ^\z
 RewriteRule ^(.*)$ https://cpr-team.com/? [R=301,L]
+
+# Remove file extension
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule (.*) $1.html [L]
