--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         run: yarn run export
       - name: Zip artifacts
         run: |
-          zip -r my-artifact ./out
+          zip -rj my-artifact ./out
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
